--- a/iq_quiz.html
+++ b/iq_quiz.html
@@ -3,34 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IQ Quiz</title>
+    <title>IQ Quiz - Start</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="quiz-container">
         <h1>IQ Quiz</h1>
         <p>Testa din IQ med vårt roliga och utmanande quiz! Du kommer att få 10 frågor med olika svårighetsgrader.</p>
-        <button id="start-btn">Starta Quiz</button>
+        <a href="question1.html" id="start-btn">Starta Quiz</a>
     </div>
-
-    <div id="quiz-popup" class="popup">
-        <div class="popup-content">
-            <div id="timer" class="timer"></div>
-            <div id="quiz" class="container"></div>
-            <button id="next-btn">Nästa Fråga</button>
-        </div>
-    </div>
-
-    <div id="result-popup" class="popup">
-        <div class="popup-content">
-            <h2>Resultat</h2>
-            <div id="final-score"></div>
-            <canvas id="iqChart" width="400" height="200"></canvas>
-            <button id="restart-btn">Starta Om</button>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
