--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="quiz-container">
         <h1>IQ Quiz</h1>
         <button id="startQuizButton">Starta Quiz</button>
+        <p id="omOssText">Om oss: Detta är ett IQ-quiz där du kan testa din kunskap och få ett resultat. Prova och se hur smart du är!</p>
     </div>
 
     <!-- Popup modal för frågorna -->
@@ -26,12 +27,5 @@
     <!-- Inkludera Chart.js via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
-    
-    <!-- Footer section -->
-    <footer>
-        <p>&copy; 2024 <span>WarAway</span>. Framtidens företag. All information är noggrant verifierad för att ge dig en underhållande och informativ upplevelse.</p>
-    </footer>
-
-    <script src="main.js"></script>
 </body>
 </html>
