--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
     <div class="quiz-container">
         <h1>IQ Quiz</h1>
-        <button id="startQuizButton">Starta Quiz</button>
+        <button id="startQuizButton" class="btn">Starta Quiz</button>
         <p id="omOssText">Om oss: Detta är ett IQ-quiz där du kan testa din kunskap och få ett resultat. Prova och se hur smart du är!</p>
     </div>
 
     <!-- Popup modal för frågorna -->
     <div id="quizModal" class="modal">
-        <div class="modal-content">
+        <div class="modal-content animated fadeIn">
             <h2 id="questionText"></h2>
             <div id="answerOptions"></div>
             <p>Tid kvar: <span id="timer">10</span> sekunder</p>
-            <button id="nextQuestionButton">Nästa</button>
+            <button id="nextQuestionButton" class="btn">Nästa</button>
         </div>
     </div>
 
