--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <div class="quiz-container">
         <h1>IQ Quiz</h1>
-        
-        <!-- Lägger till input-fält för testkod -->
+
+        <!-- Text och input-fält för testkod -->
+        <p id="testCodeText">Ange testkoden för att se testresultat:</p>
         <input type="text" id="testCodeInput" placeholder="Ange testkod här...">
-        <button id="testCodeButton" class="btn">Testresultat</button>
         
         <button id="startQuizButton" class="btn">Starta Quiz</button>
-        <p id="omOssText">Om oss: Detta är ett IQ-quiz där du kan testa din kunskap och få ett resultat. Prova och se hur smart du är!</p>
+        <p id="omOssText">Detta är ett IQ-quiz där du kan testa din kunskap och få ett resultat. Prova och se hur smart du är!</p>
     </div>
 
     <!-- Popup modal för frågorna -->
